New pages added, slight remodel of the navigation menu

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -2,4 +2,5 @@
     ViewData["Title"] = "CorgiTank - About";
 }
 
-<h1>This is a test</h1>
+<h1>Welcome to the general about section of this website</h1>
+
