--- a/Views/Home/AboutWebsite.cshtml
+++ b/Views/Home/AboutWebsite.cshtml
@@ -3,4 +3,4 @@
 }
 <h1>Information Regarding This Website</h1>
 
-<p>This is a website that is created and hosted by one college student in their bedroom</p>
+<p>This is a website that is created and hosted by one IT college student in their bedroom who probably has no idea what theyre doing</p>
