--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -18,7 +18,8 @@
 		<h4>the official website</h4>
 	</header>
 	<section>
-		<h3>.This website is still under construction thank you for your patience.</h3>
+		<h2>This here is the main landing page</h2>
+		<h3>_Please enjoy your stay_</h3>
 	</section>
 </body>
 </html>
