--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -16,11 +16,12 @@ body {
     width: 100%;
     z-index: 1;
 }
-#nav_menu ul{
-    list-style-type: none;
-    text-align: center;
-    position: relative;
-}
+    #nav_menu ul {
+        list-style-type: none;
+        text-align: center;
+        padding-left: 0;
+        position: relative;
+    }
 #nav_menu ul li{
     width: 19.50%;
     float: left;
@@ -44,9 +45,10 @@ body {
 
     }
 
-    #nav_menu ul li:hover > ul {
-        display: block;
-    }
+        #nav_menu ul li:hover > ul {
+            display: block;
+            transition: border .5s ease-out, .5s;
+        }
 
 #nav_menu > ul::after{
     content: "";
@@ -64,7 +66,7 @@ body {
     color: black;
     background-color: white;
     padding: 1em 0;
-    transition: border .5s ease-out, .5s;
+
 }
 
 /* HEADER RULES */
