Added a lot of pretty graphics and a bug reporter

--- a/Views/About/About.cshtml
+++ b/Views/About/About.cshtml
@@ -2,5 +2,9 @@
     ViewData["Title"] = "CorgiTank - About";
 }
 
+<body class ="About">
+
+</body>
+
 <h1>Welcome to the general about section of this website</h1>
 
