--- a/Views/About/AboutWebsite.cshtml
+++ b/Views/About/AboutWebsite.cshtml
@@ -1,6 +1,22 @@
 ﻿@{
     ViewData["Title"] = "About Website";
 }
-<h1>Information Regarding This Website</h1>
+<body id="AboutWebsiteBody">
+    <header id="AboutWebsiteHeader">
+        <h1>Information Regarding This Website</h1>
+        <h3>This is a website that is created and hosted by one IT college student in their bedroom who probably has no idea what they're doing.</h3>
+    </header>
+    <section id="easyReadAbout">
+        <p>
+            In all seriousness, this is a website hosted by an individual who takes a deep interest in Information Technologies, oddly useful information, firearms, and a wide variety of different 
+            forms of media. This website was mostly created with the mindset of wanting to learn how to manage server with the intention of improving my overall skills with coding. This website's 
+            design has been inspired by various other websites I visit, graphichs from the 1980s-1990s, and outer-space, which are the constant themes I want to keep this project at; making this
+            also a piece of art to an extent. If you are looking for a way to report bugs or glitches in the website you can email me through the <a asp-controller="Home" asp-action="SecurityBugReport">Bug Reporter</a> that is found in the
+            footer. While I will continue to work with this website and attempt to build it into what I want it to be, please remember that this is ultimately a personal project and life tends to get 
+            busy. Nonetheless, please enjoy the on-going and everchanging project "CorgiTank"!     
+        </p>
+    </section>
+</body>
 
-<p>This is a website that is created and hosted by one IT college student in their bedroom who probably has no idea what theyre doing</p>
+
+
