--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,6 +11,9 @@
 
 <!--The Body-->
 <body>
+	<video autoplay muted loop id="HomePagevideo">
+		<source src="~/videos/EarthVideoBG.mp4" type="video/mp4" />
+	</video>
 	<header>
 		<h1 id="headerleft">~</h1>
 		<h1 id="headerright">~</h1>
