--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
         @RenderBody()
     </div>
     <footer>
-        &copy 2026 CorgiTank
+        &copy 2026 CorgiTank <a asp-controller="Home" asp-action="SecurityBugReport">Bug Reporting</a>
     </footer>
 </body>
 </html>
