Added a wevsite update section to the home page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 	USAGE/ISSUES: Meant to let me make cool stuff.
 *@
 @{
-    ViewData["Title"] = "corgitank - home";
+	ViewData["Title"] = "corgitank - home";
 }
 
 <!--The Body-->
@@ -23,5 +23,17 @@
 	<section>
 		<h2>This here is the main landing page</h2>
 		<h3>_Please enjoy your stay_</h3>
+		<div id="WebsiteUpdates">
+				<h2>Website Updates</h2>
+				<ul>
+					<li>Added a website update section to homepage</li>
+					<li>Added auto incrementing year</li>
+					<li>Added new webpage that will contain various utlities</li>
+					<li>Added webpage icon</li>
+					<li>Removed the BED Calculator Page</li>
+					<li>slightly improved some of the stylesheet code</li>
+					<li>Cut homepage Background video in half</li>
+				</ul>
+		</div>
 	</section>
 </body>
