--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,6 +4,11 @@
     THIS IS SHARED, MEANING ALL CODE HERE WILL GET APPLIED TO ALL PAGES UNLESS IT IS LEFT OUT
 *@
 
+<!--Grabs the current year for the footer-->
+@{
+    string currentYearString = DateTime.Now.Year.ToString();
+}
+
 <!--The technical stuff-->
 <!DOCTYPE html>
 
@@ -51,7 +56,7 @@
         @RenderBody()
     </div>
     <footer>
-        &copy 2026 CorgiTank <a asp-controller="Home" asp-action="SecurityBugReport">Bug Reporting</a>
+        &copy @currentYearString CorgiTank <a asp-controller="Home" asp-action="SecurityBugReport">Bug Reporting</a>
     </footer>
 </body>
 </html>
